src/css/base.css
:root {
  --0: #000000;
  --50: #0a0a0a;
  --100: #171717;
  --200: #262626;
  --300: #373737;
  --400: #525252;
  --500: #8a8a8a;
  --600: #a3a3a3;
  --700: #d4d4d4;
  --800: #e5e5e5;
  --900: #f5f5f5;
  --950: #fafafa;
}

* { all: unset; }

.label {
  font-family: 'Lexend';
  margin-top: -1px;
  color: var(--900);
}

.nerd {
  font-family: "Symbols Nerd Font";
  color: var(--900);
}

.symbols {
  font-family: "Material Symbols Outlined";
  margin-top: -1px;
  color: var(--900);
}

.symbol-xs1 { font-size: 6px; -gtk-icon-size: 6px; font-weight: 600; }
.symbol-xs2 { font-size: 8px; -gtk-icon-size: 8px; font-weight: 600; }
.symbol-xs3 { font-size: 10px; -gtk-icon-size: 10px; font-weight: 600; }

.symbol-s1 { font-size: 12px; -gtk-icon-size: 12px; font-weight: 600; }
.symbol-s2 { font-size: 14px; -gtk-icon-size: 14px; font-weight: 600; }
.symbol-s3 { font-size: 16px; -gtk-icon-size: 16px; font-weight: 600; }

.symbol-m1 { font-size: 24px; -gtk-icon-size: 24px; font-weight: 600; }
.symbol-m2 { font-size: 28px; -gtk-icon-size: 28px; font-weight: 600; }
.symbol-m3 { font-size: 32px; -gtk-icon-size: 32px; font-weight: 600; }
.symbol-m4 { font-size: 36px; -gtk-icon-size: 36px; font-weight: 600; }

.symbol-x1 { font-size: 52px; -gtk-icon-size: 52px; font-weight: 600; }
.symbol-x2 { font-size: 68px; -gtk-icon-size: 68px; font-weight: 600; }
.symbol-x3 { font-size: 84px; -gtk-icon-size: 84px; font-weight: 600; }

.label-display-s { font-size: 32px; font-weight: 800; }
.label-display-m { font-size: 37px; font-weight: 800; }
.label-display-l { font-size: 42px; font-weight: 800; }

.label-heading-s { font-size: 17px; font-weight: 700; }
.label-heading-m { font-size: 21px; font-weight: 700; }
.label-heading-l { font-size: 25px; font-weight: 700; }

.label-body-s { font-size: 7px; font-weight: 600; }
.label-body-m { font-size: 9px; font-weight: 600; }
.label-body-l { font-size: 11px; font-weight: 600; }

